añadiendo url de formulario

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sunt et dignissimos quibusdam esse commodi maiores mollitia cupiditate officiis? Laboriosam nobis porro, suscipit illo quibusdam officiis distinctio delectus iusto vitae.
                     Tus proyectos de infraestructura en manos de expertos calificados!
                   </p>
-                  <a href="#" class="btn btn-outline-light">Cotiza con nosotros</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7q_pc7KRVH4vBfMy2rly3vVsaaiq8OqVT-eQdA9HbIbpQQg/viewform" class="btn btn-outline-light">Cotiza con nosotros</a>
                   <!-- <button type="button2" class="btn btn-platzi" data-toggle="modal" data-target="#modalCompra">Cotiza con nosotros</button> -->
                 </div>
               </div>
